# collatz

./: .gitignore  Cargo.toml  README.md  min_vs_power_of_two.sh
src/: main.rs
src/algos/: mod.rs
