[package]
name = "collatz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-traits = "0.2.15"
indicatif = "0.17.2"
clap = { version = "4.0.25", features = ["derive"] }
